# caltrain-tracker

./: .gitignore  Caltrain dashboard ideas.txt  Dockerfile  Dockerfile.app  Dockerfile.prefect  LICENSE  README.md  alembic.ini  app.py  caltrain_lat_long.db  caltrain_performance.db  caltrain_testing.ipynb  check_db.py  collect_lat_long_data.py  data_processing_log.txt  docker-compose.yaml  fetch_and_process_gtfsrt.py  main.py  otp_analysis.ipynb  plotly_graph.html  pyproject.toml  rebuild_plots.py  requirements-prefect.txt  requirements.txt  run_data_processing_standalone.py  setup_dev.sh  test.py  test_data_collection.py  test_data_processing.py  test_data_processing_direct.py  test_direct_db_access.py  test_prefect.py  test_sqlite_db.py  testinng.ipynb  timezone-fix.py  unique_trips.csv
GTFSTransitData_CT/: agency.txt  calendar.txt  calendar_attributes.txt  calendar_dates.txt  directions.txt  fare_attributes.txt  fare_rider_categories.txt  fare_rules.txt  farezone_attributes.txt  feed_info.txt  rider_categories.txt  routes.txt  shapes.txt  stop_times.txt  stops.txt  trips.txt
alembic/: env.py
archive/: app.py  data_collection_script.py  index.html  main.py  script.js
data/: caltrain_lat_long.db  station_metadata.json
docs/: index.html  styles.css
gtfs_data/: calendar.txt  calendar_attributes.txt  calendar_dates.txt  directions.txt  fare_attributes.txt  fare_rider_categories.txt  fare_rules.txt  farezone_attributes.txt  feed_info.txt  route_attributes.txt  routes.txt  shapes.txt  stop_times.txt  stops.txt  transfers.txt  trips.txt
scripts/: backup_to_nas.py  (+2 more)
(+91 files in other folders)
