[project]
name = "caltrain-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "duckdb>=1.4.3",
    "ipykernel>=7.1.0",
    "nbformat>=5.10.4",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "polars>=1.36.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.0.0",
    "pytz>=2025.2",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.45",
]
